module8/nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-for-httpserver-in-k8s 
spec:
  selector:
    app: httpserver-in-k8s
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
