module8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-of-httpserver-in-k8s
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - myhttpserver.xxx
      secretName: secret-of-httpserver-in-k8s
  rules:
    - host: myhttpserver.xxx
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: service-for-httpserver-in-k8s
                port:
                  number: 8080
